change: investment form, icon of range and inputs for soles and dolares | add: new icon for investment form | fix: the footer for version mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -228,31 +228,34 @@ input[type="range"] {
 }
 
 input[type="range"]::-moz-range-thumb {
-  width: 24px;
+  width: 50px;
   height: 24px;
-  border-radius: 50%;
-  background: url(../images/Section-5/BillHand.png);
+  /* border-radius: 50%; */
+  background: url(../images/Section-5/moneyicon.svg);
   background-size: contain;
   cursor: pointer;
+  background-repeat: no-repeat;
 }
 
 input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none; /* delite thumb */
 
-  height: 35px;
-  width: 35px;
-  border-radius: 50%;
-  background: url(../images/Section-5/BillHand.png);
+  height: 60px;
+  width: 60px;
+  /* border-radius: 50%; */
+  background: url(../images/Section-5/moneyicon.svg);
   background-size: contain;
   cursor: pointer;
-  margin-top: -9px;
+  background-repeat: no-repeat;
+  margin-top: -20px;
+  margin-left: -5px;
 }
 
 input[type="range"]::-webkit-slider-runnable-track {
   width: 100%;
   height: 10px;
   cursor: pointer;
-  background: #1a3a5a; /* color track */
+  background: #81F3DB; /* color track */
   border-radius: 5px;
   /* Border track*/
 }
